--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,11 @@
 <footer data-testid="footer" class="p-6 text-center text-sm text-black dark:text-white">
 	<p>
-		Copyright © {new Date().getFullYear()}. All rights reserved. Made by <a
+		Copyright © {new Date().getFullYear()}. Basierend auf einem Design von <a
 			href="https://github.com/veranikabarel"
 			target="_blank"
 			rel="noopener"
 		>
 			<span class="text-orange"> Veranika Kasparevych</span>
 		</a>
-		Assets designed by <a href="www.freepik.com" target="_blank" rel="noopener"
-			><span class="text-orange">Freepik</span></a
-		>
 	</p>
 </footer>
