Changed brand color and changed text to german

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,15 +5,15 @@ import { Astronav, MenuIcon, MenuItems } from 'astro-navbar';
 
 const menuitems = [
 	{
-		title: 'About',
+		title: 'Über mich',
 		path: '#about',
 	},
 	{
-		title: 'Projects',
+		title: 'Angebote',
 		path: '#projects',
 	},
 	{
-		title: 'Contact',
+		title: 'Kontakt',
 		path: '#contact',
 	},
 ];
@@ -44,7 +44,7 @@ const menuitems = [
 						</>
 					))
 				}
-				<li><ToggleTheme /></li>
+				<!--<li><ToggleTheme /></li>-->
 			</ul>
 		</MenuItems>
 	</Astronav>
