--- a/src/components/ui/Social.astro
+++ b/src/components/ui/Social.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon';
 <a href="https://github.com/" target="_blank" rel="noopener" aria-label="github"
 	><Icon
 		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
-		name="simple-icons:github"
+		name="simple-icons:instagram"
 	/></a
 >
 <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="linkedin"
@@ -17,6 +17,6 @@ import { Icon } from 'astro-icon';
 <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="twitter"
 	><Icon
 		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
-		name="simple-icons:twitter"
+		name="simple-icons:xing"
 	/></a
 >
