--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,18 @@
 <footer data-testid="footer" class="p-6 text-center text-sm text-black dark:text-white">
 	<p>
+		<a
+			href=""
+		>Impressum</a>
+		<span> | </span>
+		<a>Datenschutz</a>
+	</p>
+	<p>
 		Copyright © {new Date().getFullYear()}. Basierend auf einem Design von <a
-			href="https://github.com/veranikabarel"
-			target="_blank"
-			rel="noopener"
-		>
-			<span class="text-orange"> Veranika Kasparevych</span>
-		</a>
+		href="https://github.com/veranikabarel"
+		target="_blank"
+		rel="noopener"
+	>
+		<span class="text-orange"> Veranika Kasparevych</span>
+	</a>
 	</p>
 </footer>
