--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! Ich bin <span class="text-orange">Verena Sulk</span> und bin Schlafberatering in Münster.
+				Hi! Ich bin <span class="text-orange">Verena Sulk</span> und bin Schlafberaterin in Münster.
 			</h1>
 		</div>
 		<div class="mb-10">
